tests/ui/readme.stderr
error[E0038]: the trait `MyTrait` is not dyn compatible
 --> tests/ui/readme.rs:8:12
  |
8 |     let _: &dyn MyTrait;
  |            ^^^^^^^^^^^^ `MyTrait` is not dyn compatible
  |
note: for a trait to be dyn compatible it needs to allow building a vtable
      for more information, visit <https://doc.rust-lang.org/reference/items/traits.html#object-safety>
 --> $RUST/core/src/hash/mod.rs
  |
  |     fn hash<H: Hasher>(&self, state: &mut H);
  |        ^^^^ ...because method `hash` has generic type parameters
  |
 ::: tests/ui/readme.rs:3:7
  |
3 | trait MyTrait: Hash {
  |       ------- this trait is not dyn compatible...
  = help: consider moving `hash` to another trait
